# PDAAAL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux-clang.yml  build-linux.yml  build-macos.yml  build.yml
benchmark/: CMakeLists.txt
examples/: example-instance.json  nfa1.txt  nfa2.txt  pautomaton1-f.json  pautomaton1-f.txt  pautomaton1-i.json  pautomaton1-i.txt  pda-json-example-1-weight-neg.json  pda-json-example-1-weight.json  pda-json-example-1.json  pda-json-example-2.json
src/: CMakeLists.txt  main.cpp
src/engine/: PAutomaton.cpp  PAutomaton.h  Solver.h
src/include/: CMakeLists.txt  pdaaal-config.cmake.in
src/include/pdaaal/: AbstractionMapping.h  AbstractionPDA.h  AutomatonPath.h  CegarPdaFactory.h  NFA.h  PAutomaton.h  PAutomatonAlgorithms.h  PAutomatonProduct.h  PDA.cpp  PDA.h  PDAFactory.h  ParsingPDAFactory.h  Reducer.h  Refinement.h  Solver.h  SolverInstance.h  TypedPAutomaton.h  TypedPDA.h  Weight.h
src/include/pdaaal/cegar/: AbstractionMapping.h  AbstractionPAutomaton.h  AbstractionPDA.h  AbstractionSolverInstance.h  CegarPdaFactory.h  Refinement.h
src/include/pdaaal/internal/: PAutomaton.h  PAutomatonAlgorithms.h  PDA.cpp  PDA.h  PdaSaturation.h  Reducer.cpp  Reducer.h
src/include/pdaaal/parsing/: NfaParser.cpp  NfaParser.h  NfaParserGrammar.h
src/include/pdaaal/printing/: PDAtoJSONPrinter.h
src/include/pdaaal/utils/: SaxHandlerHelpers.h  absl_hash.h  flags.h  fut_set.h  more_algorithms.h  ptrie_interface.h  std20.h  vector_printer.h  vector_set.h  workset.h
src/model/: NFA.h  TypedPDA.h
src/pdaaal/: AbstractionMapping.h  AbstractionPAutomaton.h  AbstractionPDA.h  CegarPdaFactory.h  NFA.h  NewPDAFactory.h  PAutomaton.h  PAutomatonProduct.h  PDA.cpp  PDA.h  PDAAdapter.h  PDAFactory.h  PDA_Adapter.h  ParsingPDAFactory.h  PostStar.h  Reducer.cpp  Reducer.h  Refinement.h  SimplePDAFactory.h  Solver.h  SolverAdapter.h  SolverInstance.h  Solver_Adapter.h  StackSizeWeight.cpp  StackSizeWeight.h  StateTypedPDA.h  TypedPDA.h  Verifier.h  WPDA.cpp  WPDA.h  Weight.h  fut_set.h  ptrie_interface.h  std20.h  vector_set.h
src/pdaaal-bin/: CMakeLists.txt  Verifier.h  main.cpp
src/pdaaal-bin/parsing/: PAutomatonJsonParser.h  PAutomatonParser.h  Parsing.cpp  Parsing.h  PdaJsonParser.h  SaxHandlerDispatch.h  SaxHandlerHelpers.h  SolverInstanceJsonParser.h
src/pdaaal-bin/utils/: json_stream.h  stopwatch.h
src/pdaaal/parsing/: JsonParser.cpp  JsonParser.h  NfaParser.cpp  NfaParserGrammar.h  PAutomatonParser.h  Parsing.cpp  Parsing.h  PdaJsonParser.h
src/pdaaal/utils/: fut_set.h  stopwatch.h  vector_set.h
test/: AutomatonPath_test.cpp  CMakeLists.txt  NFA_test.cpp  NfaParser_test.cpp  PAutomaton_test.cpp  PDAFactory_test.cpp  PDA_test.cpp  Parser_test.cpp  ParsingPDAFactory.h  ParsingPDAFactory_test.cpp  Reducer_test.cpp  Solver_test.cpp  StackSizeWeight_test.cpp  TestPDAFactory.cpp  TestPDAFactory.h  Verification_test.cpp  WPDA_test.cpp  Weight_test.cpp  fut_set_test.cpp  testmain.cpp
test/pdaaal-bin-test/: CMakeLists.txt
